--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
 body {
   font-family: "Ubuntu", sans-serif;
   font-size: 1.1rem;
@@ -18,21 +28,36 @@ body {
   color: var(--dark-brown);
   text-transform: uppercase;
   min-height: 100vh;
-  display: flex;
+  background-color: var(--dark-brown);
+  overflow: hidden;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  background-image: url("./assets/pictures/new_years.jpg");
+  align-items: center; */
+  /* min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-attachment: fixed; */
+  background-attachment: fixed; */
 }
 .loading {
   font-size: 2rem;
   font-weight: bold;
+  z-index: 2;
+}
+.backgroundContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: fadeIn 1s ease;
 }
 /* timer */
 .timerContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
   /* border: 2px solid var(--dark-brown); */
@@ -42,11 +67,22 @@ body {
   border-radius: 30px;
   padding: 20px;
   padding-bottom: 40px;
+  z-index: 2;
   /* box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px; */
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+.timerContainer::after {
+  content: "GMT 00:00";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  opacity: 0.8;
+}
+
 .timerTitle {
   text-align: center;
   padding: 50px;
@@ -89,4 +125,62 @@ body {
   margin: 0 auto;
   margin-top: 20px;
   width: 50%;
+}
+/* image classes */
+.newYears {
+  background-image: url("./assets/pictures/new_years.jpg");
+  animation: fadeIn 1s ease;
+  transition: 1s ease;
+}
+.halloween {
+  background-image: url("./assets/pictures/halloween.jpg");
+  filter: blur(4px);
+  transform: scale(1.03);
+  animation: fadeIn 1s ease;
+  transition: 1s ease;
+}
+.christmas {
+  background-image: url("./assets/pictures/christmas.jpg");
+  filter: blur(4px);
+  transform: scale(1.03);
+  animation: fadeIn 1s ease;
+  transition: 1s ease;
+}
+.allSaints {
+  background-image: url("./assets/pictures/allSaints.jpg");
+  filter: blur(4px);
+  transform: scale(1.03);
+  animation: fadeIn 1s ease;
+  transition: all 1s ease;
+}
+.epiphany {
+  background-image: url("./assets/pictures/epiphany.jpg");
+  filter: blur(4px);
+  transform: scale(1.03);
+  animation: fadeIn 1s ease;
+  transition: all 1s ease;
+}
+.valentines {
+  background-image: url("./assets/pictures/valentines.jpg");
+  filter: blur(4px);
+  transform: scale(1.03);
+  animation: fadeIn 1s ease;
+  transition: all 1s ease;
+}
+.stPartricks {
+  background-image: url("./assets/pictures/stPatricks.jpg");
+  filter: blur(4px);
+  transform: scale(1.03);
+  animation: fadeIn 1s ease;
+  transition: all 1s ease;
+}
+
+/* animations */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
