--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,11 @@ body {
 /* media queries */
 @media (max-width: 1000px) {
   .timerContainer {
+    backdrop-filter: none;
+    background: none;
+    box-shadow: none;
+  }
+  .timerContainer {
     margin-top: 50px;
   }
   .boxesContainer {
@@ -195,12 +200,20 @@ body {
   }
 }
 @media (max-width: 500px) {
+  .timerTitle {
+    padding: 30px;
+    padding-bottom: 20px;
+  }
+  .timerDate {
+  }
   .timerContainer {
-    margin-top: 0;
+    margin-top: 10px;
   }
   .box {
-    height: 150px;
-    width: 150px;
+    height: 110px;
+    width: 110px;
+    font-size: 0.7rem;
+    margin: 5px;
   }
   .select {
     width: 90%;
